dfir_rs/tests/snapshots/surface_handoff__handoff_basic@graphvis_dot.snap
---
source: dfir_rs/tests/surface_handoff.rs
expression: flow.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter(0..5_i32)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n3v1 [label="(n3v1) for_each(|v: i32| out.push(v))", shape=house, fillcolor="#ffff88"]
    n2v1 -> n3v1
    n1v1 -> n2v1
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1"
        n1v1
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1"
        n3v1
    }
}
