dfir_rs/tests/snapshots/surface_handoff__singleton_reference_only_no_handoffs@graphvis_dot.snap
---
source: dfir_rs/tests/surface_handoff.rs
expression: flow.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([42_i32])", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) source_iter(1..=3_i32)", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) map(|x| x + my_val)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) for_each(|v: i32| out.push(v))", shape=house, fillcolor="#ffff88"]
    n4v1 -> n5v1
    n3v1 -> n4v1
    n1v1 -> n4v1 [color=red]
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1"
        subgraph sg_1v1_var_my_val {
            cluster=true
            label="var my_val"
            n1v1
        }
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1"
        n3v1
        n4v1
        n5v1
    }
}
